# CarbonSense

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  README.md  TECH_STACK_LOCK.md  pyproject.toml
.github/workflows/: ci.yml
apps/: README.md
apps/api/: dependencies.py  errors.py  idempotency.py  jobs.py  main.py  rate_limit.py  webhooks.py
apps/api/routers/: feedback.py  (+6 more)
apps/worker/: config.py  event_consumer.py  main.py  retraining_event_consumer.py
database/: README.md  alembic.ini
database/ddl/: canonical_schema.sql
database/migrations/: env.py  script.py.mako
database/policies/: tenant_isolation.sql
docs/: CELERY_FALLBACK_SPIKE.md  README.md
docs/PRD/: PRD_v2.md
docs/ROADMAP/: ROADMAP_v2.md
docs/TRD/: TRD_v2.md
docs/architecture/: DATA_AND_MODEL_STRATEGY.md  REPOSITORY_STRUCTURE_TRACK1.md
infrastructure/: README.md
infrastructure/docker/: WORKER_DEPLOYMENT.md  docker-compose.yml  worker.Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
models/: README.md
models/evaluation/: metrics.py  promotion_gate.py  rollback.py
models/feature_store/: __init__.py  feature_set_v1.py  repository.py
models/registry/: audit.py  mlflow_registry.py  register.py
models/serving/: ensemble_serving.py  local_registry.py
models/training/: autoencoder.py  isolation_forest.py
orchestration/: README.md
orchestration/temporal/: dto.py
pipelines/dataset_ingestion/: ingest.py  loader.py  public_dataset_config.py
pipelines/feature_engineering/: batch_pipeline.py  dataset_split.py
pipelines/training/: report.py  train_and_evaluate.py
scripts/: README.md
scripts/bootstrap/: register_retraining_schedules.py
scripts/ci/: validate_rule_versions.py
scripts/maintenance/: tenant_data_deletion.py
scripts/migrations/: import_holidays.py
scripts/training/: backfill_features.py  ingest_public_dataset.py  prepare_bdg2_fixture.py  run_training.py
services/: README.md
services/calibration/: dto.py  mapie_wrapper.py  repository.py  service.py
services/drift_detection/: config.py  detector.py  event_publisher.py  models.py  repository.py
services/explainability/: __init__.py  bundle_assembler.py  feature_registry.py  models.py  repository.py  shap_explainer.py
services/feedback/: __init__.py  opt_in_pipeline.py  repository.py  service.py
services/ingestion/: __init__.py  alert_store.py  bounds_and_drift.py  bounds_repository.py  config.py  default_config.json  event_publisher.py  models.py  normalization.py  orchestrator.py  quality_gate.py  repository.py  sensor_fault.py
services/ml_ensemble/: config.py  feature_assembly.py  interfaces.py  models.py  scaler.py
services/optimization/: bounds.py  interfaces.py  models.py  providers.py  registry.py  repository.py  service.py  tariff.py
services/reporting/: __init__.py  fallback.py  models.py  narrator.py  pdf_renderer.py  prompt_builder.py  report_service.py
services/rules_engine/: evaluator.py  handoff.py  models.py  registry.py  repository.py  service.py
services/stl_detection/: __init__.py  config.py  decomposition.py  exceptions.py  interfaces.py  models.py  repository.py  service.py
services/tenant_admin/: models.py  repository.py  service.py
shared/: README.md  database.py
shared/auth/: jwt.py  secrets.py  tenant_context.py
shared/calendar/: __init__.py  holiday_provider.py
shared/config/: auth.py  calibration.py  database.py  kafka.py  ml_registry.py  optimization.py  temporal.py
tests/: README.md  conftest.py
(+161 files in other folders)
