[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "services", "shared", "models", "orchestration"]

[project]
name = "carbonsense"
version = "0.1.0"
description = "Energy intelligence platform for building decarbonization"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{ name = "CarbonSense Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "temporalio>=1.7",
    "confluent-kafka>=2.5",
    "mlflow>=2.15",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "shap>=0.45",
    "mapie>=0.9",
    "pymannkendall>=1.4",
    "anthropic>=0.39",
    "weasyprint>=62",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25",
    "boto3>=1.34",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    "mypy>=1.10",
    "pip-tools>=7.4",
    "testcontainers[kafka]>=4.4",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.2",
]
ml = [
    "torch>=2.3",
]
research = [
    "torch>=2.3",
    "torch-geometric>=2.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "services", "shared", "models", "orchestration", "pipelines"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = ["S101"] # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201", "S603"] # CLI scripts print to stdout and shell out to git/trusted tools by design

[tool.ruff.lint.isort]
known-first-party = ["apps", "services", "shared", "models", "orchestration", "pipelines"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom *is* Depends(...)/Query(...)/etc. in
# argument defaults -- B008 exists to catch accidental mutable-default
# footguns, not this well-defined, framework-standard pattern (matches
# FastAPI's own documented ruff configuration).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.File",
    "fastapi.Form",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require database)",
    "security: Tenant isolation and security tests",
    "performance: Performance benchmark tests",
    "e2e: End-to-end pipeline tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true # statsmodels ships no py.typed marker / stubs upstream
